general UI fix, use classnames, hide scrollbar on modal

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,3 +13,9 @@ body {
 * {
   box-sizing: border-box;
 }
+
+@media (min-width: 992px) {
+  .no-scrollbar::-webkit-scrollbar {
+    width: 0px;
+  }
+}
